--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,14 +1,14 @@
-SRCS=phonebook.cpp
-SRCS_O=$(SRCS:.cpp=.o)
-NAME=phonebook
+SRCS= PhoneBook.cpp Contact.cpp main.cpp
+SRCS_O= $(SRCS:.cpp=.o)
+NAME= phonebook
 
 all: $(NAME)
 
-$(NAME): $(SRCS_O)
-	c++ -std=c++98 $(SRCS_O) -o $(NAME)
+$(NAME): $(SRCS_O) Contact.hpp PhoneBook.hpp
+	c++ -std=c++98 $(SRCS_O) -o $(NAME) 
 
-%.o: %.cpp
-	c++ -c -std=c++98 $< -o $@
+%.o: %.cpp Contact.hpp PhoneBook.hpp
+	c++ -c -std=c++98 $< -o $@ 
 
 clean:
 	rm -f $(SRCS_O)
