--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mait-elk <mait-elk@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/16 18:52:27 by mait-elk          #+#    #+#              #
+#    Updated: 2024/04/16 18:52:28 by mait-elk         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 SRCS=megaphone.cpp
 SRCS_O=$(SRCS:.cpp=.o)
 NAME=megaphone
