--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mait-elk <mait-elk@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/04/16 18:48:31 by mait-elk          #+#    #+#              #
+#    Updated: 2024/04/16 18:48:31 by mait-elk         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 SRCS= PhoneBook.cpp Contact.cpp main.cpp
 SRCS_O= $(SRCS:.cpp=.o)
 NAME= phonebook
