--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,19 +6,19 @@
 #    By: mait-elk <mait-elk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/16 18:48:31 by mait-elk          #+#    #+#              #
-#    Updated: 2024/08/04 10:46:20 by mait-elk         ###   ########.fr        #
+#    Updated: 2024/08/15 17:10:05 by mait-elk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-FLAGS= -Wall -Wextra -Werror -std=c++98
-SRCS= Account.cpp Tests.cpp
+FLAGS= #-Wall -Wextra -Werror -std=c++98
+SRCS= Account.cpp
 SRCS_O= $(SRCS:.cpp=.o)
-NAME= phonebook
+NAME= tests
 
 all: $(NAME)
 
 $(NAME): $(SRCS_O) Account.hpp
-	c++ $(FLAGS) $(SRCS_O) -o $(NAME) 
+	c++ $(FLAGS)  Tests.cpp $(SRCS_O) -o $(NAME) 
 
 %.o: %.cpp Account.hpp
 	c++ -c $(FLAGS) $< -o $@ 
