--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -5,12 +5,13 @@
 #                                                     +:+ +:+         +:+      #
 #    By: mait-elk <mait-elk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/04/16 18:48:31 by mait-elk          #+#    #+#              #
-#    Updated: 2024/04/16 18:48:31 by mait-elk         ###   ########.fr        #
+#    Created: 2024/08/22 16:50:59 by mait-elk          #+#    #+#              #
+#    Updated: 2024/08/22 16:50:59 by mait-elk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-FLAGS= -Wall -Wextra -Werror -std=c++98
+
+CFLAGS= -Wall -Wextra -Werror -std=c++98
 SRCS= PhoneBook.cpp Contact.cpp main.cpp
 SRCS_O= $(SRCS:.cpp=.o)
 NAME= phonebook
@@ -18,10 +19,10 @@ NAME= phonebook
 all: $(NAME)
 
 $(NAME): $(SRCS_O) Contact.hpp PhoneBook.hpp
-	c++ $(FLAGS) $(SRCS_O) -o $(NAME) 
+	c++ $(CFLAGS) $(SRCS_O) -o $(NAME) 
 
 %.o: %.cpp Contact.hpp PhoneBook.hpp
-	c++ -c $(FLAGS) $< -o $@ 
+	c++ -c $(CFLAGS) $< -o $@ 
 
 clean:
 	rm -f $(SRCS_O)
