--- a/01/ex06/Makefile
+++ b/01/ex06/Makefile
@@ -6,15 +6,15 @@
 #    By: mait-elk <mait-elk@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/24 11:39:18 by mait-elk          #+#    #+#              #
-#    Updated: 2024/08/25 10:09:09 by mait-elk         ###   ########.fr        #
+#    Updated: 2024/08/25 10:19:11 by mait-elk         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 COMPILER= c++
-CFLAGS= -Wall -Wextra -Werror -std=c++98
-SRCS= main.cpp
+CFLAGS= -Wall -Wextra -Werror -std=c++98 -fsanitize=address -g
+SRCS= main.cpp Harl.cpp
 SRCS_O= $(SRCS:.cpp=.o)
-NAME= replacer_tool
+NAME= harlFilter
 
 all: $(NAME)
 
